--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" src='mrcounts.github.io/bootstrap.css'>
 <link rel="stylesheet" src='mrcounts.github.io/odometer.css'>
 <script src="https://mrcounts.github.io/odometer.js"></script>
+    <script async src="https://arc.io/widget.min.js#67Ah1Sk5"></script>
 </head>
 <!------------------------------------------------------------------------------------------------------------------------------->
 <!--BODY IS THE USER INTERFACE-->
