--- a/index.html
+++ b/index.html
@@ -1,160 +1,234 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title id="pog">jay is great</title>
-    <meta name="description" content="A funny website moment. Ok visit the site.">
-    <link rel="shortcut icon" href="https://mrcounts.github.io/j.png">
-    <meta charset="UTF-8">
-<!--MAM THE HEAD CAN BE USED TO FETCH THE CSS AND JAVA LIKE I DID BELOW-->
+    <title>Jay sharma — Developer & Designer</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<meta name="description" content="Developer & Designer from India making interactive experiences." />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
+	<meta name="theme-color" content="#212121">
+	<link rel="canonical" href="jaysharma2009.github.io/" />
 
-<link rel="stylesheet" src='mrcounts.github.io/bootstrap.css'>
-<link rel="stylesheet" src='mrcounts.github.io/odometer.css'>
-<script src="https://mrcounts.github.io/odometer.js"></script>
-    <script async src="https://arc.io/widget.min.js#67Ah1Sk5"></script>
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@ijaysharma">
+	<meta name="twitter:title" content="Jay sharma — Developer & Designer">
+	<meta name="twitter:description" content="Developer & Designer from India making interactive experiences.">
+	<meta name="twitter:creator" content="@ijaysharma">
+	
+
+	<meta property="og:url" content="jaysharma2009.github.io/" />
+    <meta property="og:type" content="profile" />
+    <meta property="profile:first_name" content="jay" />
+    <meta property="profile:last_name" content="sharma" />
+    <meta property="profile:gender" content="male" />
+    <meta property="profile:username" content="jaysharma" />
+	<meta property="og:site_name" content="Jay sharma" />
+	<meta property="og:title" content="Jay sharma — Developer & Designer" />
+	<meta property="og:description" content="Developer & Designer from India making interactive experiences." />
+
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Titillium+Web:600,300|Expletus+Sans:300,700|Domine:400,700'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.3/dist/aos.css">
+
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/main.css">
+    
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+
+    <script type='application/ld+json'>
+		{
+			"@context": "http://www.schema.org",
+			"@type": "Person",
+			"name": "Jay sharma",
+			"jobTitle": "Developer & Designer",
+			"url": "jaysharma2009.github.io",
+			"address": {
+				"@type": "PostalAddress",
+				"addressLocality": "indore",
+				"addressCountry": "India"
+			},
+			"email": "iisjaysharma2009@gmail.com",
+			"birthDate": "2009-08-05",
+            
+		}
+	</script>
 </head>
-<!------------------------------------------------------------------------------------------------------------------------------->
-<!--BODY IS THE USER INTERFACE-->
-<body>
+<body id="top">
+    <section id="home" class="s-home target-section">
+        <div class="shadow-overlay" id="wave"></div>
+        <div class="home-content">
+            <div class="row home-content__main">
+                <h1>Jay Sharma</h1>
+                <p>Developer &amp; Designer</p>
+            </div>
+        </div>
+        <a href="#about" class="home-scroll smoothscroll">
+            <span class="home-scroll__text">Scroll Down</span>
+            <span class="home-scroll__icon"></span>
+        </a>
+    </section>
+    <section id="about" class="s-about">
+        <div class="row section-header" data-aos="fade-up">
+            <div class="col-full">
+                <h3 class="subhead">Hi, I'm jay</h3>
+                <h1 class="display-1">I Am A Simple Kid Who Go To School.</h1>
+            </div>
+        </div>
+    </section>
+    <section id="services" class="s-services">
+        <div class="row section-header" data-aos="fade-up">
+            <div class="col-full">
+                <h3 class="subhead">I do stuff</h3>
+                <h1 class="display-1 display-1--light">I design &amp; create experiences.</h1>
+            </div>
+        </div>
+        <div class="row" data-aos="fade-up">
+            <div class="col-full">
+                <p class="lead">
+                    I am a full stack student from indore, India. 
+                </p>
+                <p class="lead">
+                    When I'm not writing code, I enjoy classwork, reading and writing and exploring other fields like physics, youtube and homework.
+                </p>
+                <div>
+                    <!-- <h5>Work Experience</h5> -->
+                    <!--div class="job">
+                        <a>TopTal Inc.</a>
+                        <p>Full Stack Developer <span class="grey">Jun 2018 - Present</span></p>
+                    </div>
+                    <div class="job">
+                        <a>Intel Corporation</a>
+                        <p>Technical Intern <span class="grey">Jan 2019 - Jun 2019</span></p>
+                    </div>
+                    <div class="job">
+                        <a>Freelance</a>
+                        <p>Developer &amp; Designer <span class="grey">2015 - Present</span></p>
+                    </div>
+                    <div class="job">
+                        <a>BrainUno</a>
+                        <p>Founder &amp; Instructor <span class="grey">Sep 2017 - Dec 2018</span></p>
+                    </div>
+                    <div class="job">
+                        <a>Virtuaniz, Flare Buzz</a>
+                        <p>Editor &amp; Webmaster <span class="grey">Jan 2013 - Dec 2018</span></p>
+                    </div-->
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="works" class="s-works">
+        <div class="row section-header" data-aos="fade-up">
+            <div class="col-full">
+                <h3 class="subhead">I make stuff</h3>
+                <h1 class="display-1">Here are some of my projects.</h1>
+            </div>
+        </div>
+        <div class="row page-projects" data-aos="fade-up">
+            <ul class="list-projects">
+                <li class="project-item" style="background-color: #1d89e4">
+                    <a href="jaysharma2009.github.io/text" rel="noopener" target="_blank">
+                        <div class="inner">
+                            <span class="project-type">Web project</span>
+                            <h3 class="project-name" style="color:#ffffff">HTML tags</h3>
+                        </div>
+                        <div class="project-color" style="background-color:#178ff6"></div>
+                        <div class="project-visual" style="background-image: url"('saman/img/html.png');"></div>
+                    </a>
+                </li>
+                <li class="project-item" style="background-color: #448aff">
+                    <a href="jaysharma2009.github.io/list" rel="noopener" target="_blank">
+                        <div class="inner">
+                            <span class="project-type">Web App</span>
+                            <h3 class="project-name" style="color:#ffffff">Text Toolbox</h3>
+                        </div>
+                        <div class="project-color" style="background-color:#1d74ba"></div>
+                        <div class="project-visual" style="background-image: url"('saman/img/HTML_tag_for_fragments_of_unordered_list-removebg-preview.png');"></div>
+                    </a>
+                </li>
+                <!--li class="project-item" style="background-color: #448aff">
+                    <a href="jaysharma2009.github.io/text-toolbox/" rel="noopener" target="_blank">
+                        <div class="inner">
+                            <span class="project-type">Web App</span>
+                            <h3 class="project-name" style="color:#ffffff">Text Toolbox</h3>
+                        </div>
+                        <div class="project-color" style="background-color:#1d74ba"></div>
+                        <div class="project-visual" style="background-image: url('/images/portfolio/text-toolbox.jpg');"></div>
+                    </a>
+                </li>
+                <li class="project-item" style="background-color: #000000">
+                    <a>
+                        <div class="inner">
+                            <span class="project-type">Mobile App</span>
+                            <h3 class="project-name" style="color:#ffffff">Human Clock</h3>
+                        </div>
+                        <div class="project-color" style="background-color:#d34141"></div>
+                        <div class="project-visual" style="background-image: url('/images/portfolio/human-clock.jpg');"></div>
+                    </a>
+                </li>
+                <li class="project-item" style="background-color: #262626">
+                    <a href="https://github.com/jaysharma/crowdalert-hackindore" rel="noopener" target="_blank">
+                        <div class="inner">
+                            <span class="project-type">Platform &amp; Service</span>
+                            <h3 class="project-name" style="color:#ffffff">Crowd Alert</h3>
+                        </div>
+                        <div class="project-color" style="background-color:#515151"></div>
+                        <div class="project-visual" style="background-image: url('/images/portfolio/crowd-alert.jpg');"></div>
+                    </a>
+                </li>
+                <li class="project-item" style="background-color: #67cc66">
+                    <a>
+                        <div class="inner">
+                            <span class="project-type">Mobile App</span>
+                            <h3 class="project-name" style="color:#ffffff">Squishy Bird</h3>
+                        </div>
+                        <div class="project-color" style="background-color:#4ec34d"></div>
+                        <div class="project-visual" style="background-image: url('/images/portfolio/squishy-bird.jpg');"></div>
+                    </a>
+                </li-->
+            </ul>
+        </div>
+    </section>
+    <section id="contact" class="s-contact">
+        <div class="row section-header" data-aos="fade-up">
+            <div class="col-full">
+                <h3 class="subhead subhead--light">Say hi!</h3>
+                <h1 class="display-1 display-1--light">I'd love to talk.</h1>
+                <p class="lead">I'm always looking for opportunities to work on exciting projects. Let's make something great, together.</p>
+            </div>
+        </div>
+        <div class="row" data-aos="fade-up">
+            <div class="col-full contact-main">
+                <p>
+                    <a href="mailto:iisjaysharma2009@gmail.com" class="contact-email" title="Email" target="_blank" rel="noopener">iisjaysharma2009@gmail.com</a>
+                </p>
+            </div>
+        </div>
+        <div class="row" data-aos="fade-up">
+            <div class="col-full tab-full contact-secondary">
+                <h3 class="subhead subhead--light">Find me elsewhere</h3>
+                <ul class="contact-social">
+                    <li><a target="_blank" rel="noopener" href="https://github.com/jaysharma" title="GitHub"><i class="fab fa-github"></i></a></li>
+                    <li><a target="_blank" rel="noopener" href="https://t.me/Jaydeveloper0" title="Telegram">""<i class="fab fa-Telegram"></i></a></li>
+                    <li><a target="_blank" rel="noopener" href="#" title="Facebook"><i class="fab fa-facebook"></i></a></li>
+                    <li><a target="_blank" rel="noopener" href="#" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+                    <li><a target="_blank" rel="noopener" href="#" title="Steam"><i class="fab fa-steam"></i></a></li>
+                    <li><a target="_blank" rel="noopener" href="#" title="PayPal"><i class="fab fa-paypal"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="go-top">
+            <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
+        </div>
+    </section>
+    <div id="preloader">
+        <div id="loader"></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.3/dist/aos.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.96.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.96.0/examples/js/renderers/CanvasRenderer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.96.0/examples/js/renderers/Projector.js"></script>
+    <script src="js/main.js"></script>
+</body>
 
-<center><center/>
-
-<!--center is used to make anything in center of webpage--> 
-
-<marqueee behavior="scroll" direction="left">HI I AM JAY AND BELOW IS THE REPRESENTATION OF HTML TAGS</marqueee>
-
-<hr> 
-<div class="jayding">Headings</div>
-
-<mainn>
-<h1>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</h1>
-<h2>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</h2>
-<h3>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</h3>
-<h4>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</h4>
-<h5>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</h5>
-<h6>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</h6>
-<mainn/>
-
-<hr>
-
-
-<b>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</b>
-
-<br><br>
-
-<i>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</i>
-
-<br><br>
-
-<color>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</color>
-
-<br><br>
-
-<u>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</u>
-
-<br><br>
-
-<div class="dot--basic">THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</div>
-
-<br>
-
-<marquee behavior="scroll" direction="left">THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</marquee>
-
-<br><br>
-<kate>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</kate>
-<br><br>
-<body/>
-
-
-<!--below are the content to just improve the style and font-->
-
-<style>
-/* --- Mam This Is General Layout & UI --- */
-
-
-@font-face {
-  font-family: Roboto regular;
-    src: url(https://mrcounts.github.io/fonts/Roboto-Regular.ttf);
-}
-
-@font-face {
-  font-family: Roboto bold;
-    src: url(https://mrcounts.github.io/fonts/Roboto-Bold.ttf);
-}
-
-@font-face {
-  font-family: manjari bold;
-    src: url(https://mrcounts.github.io/fonts/Roboto-Bold.ttf);
-}
-
-@font-face {
-  font-family: kate;
-    src: url(https://mrcounts.github.io/fonts/hi.ttf);
-}
-
-body {
-    font-family: Roboto Medium !important;
-    background-color:white;
-    color: #222222;
-    margin: 0;
-    overflow-x: hidden;
-    overflow-x: hidden;
- }
-
-mainn {
-    font-family: Roboto Medium !important;
-    color: #111111;
- }
-
-b {
-    font-family: Roboto bold !important;
-    background-color:white;
- }
-
-color {
-color: green;
-}
-
-marquee {
-max-width: 390px;
-}
-
-kate {
-font-family: kate !important;
-font-size: 13px;
-}
-/*--------------------------------Animation of blinking text---------------------------*/
-
-/* Define animation keyframes */
-@keyframes blink {
-  0%, 100% { opacity: 0; }
-  50% { opacity: 1; }
-}
-
-
-.dot--basic {
-  animation: blink 2s infinite;
-font-size:16px;
-text-decoration: none;
-}
-
-.jayding {
-font-family: manjari bold!important;
-  animation: blink 2s infinite;
-font-size:50px;
-text-decoration: none;
-}
-
-@keyframes pulse {
-  0%, 100% { 
-    transform: scale(0) translateY(-75%);
-    background-color: blue;
-  }
-  33% {
-    background-color: orange;
-  }
-  50% { 
-    transform: scale(1.125) translateY(0);
-    background-color: red;
-  }
-}
-<style/>
+</html>
