--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="row page-projects" data-aos="fade-up">
             <ul class="list-projects">
                 <li class="project-item" style="background-color: #1d89e4">
-                    <a href="jaysharma2009.github.io/text" rel="noopener" target="_blank">
+                    <a href="text" rel="noopener" target="_blank">
                         <div class="inner">
                             <span class="project-type">Web project</span>
                             <h3 class="project-name" style="color:#ffffff">HTML tags</h3>
@@ -136,7 +136,7 @@
                     </a>
                 </li>
                 <li class="project-item" style="background-color: #448aff">
-                    <a href="jaysharma2009.github.io/list" rel="noopener" target="_blank">
+                    <a href="list" rel="noopener" target="_blank">
                         <div class="inner">
                             <span class="project-type">Web App</span>
                             <h3 class="project-name" style="color:#ffffff">Text Toolbox</h3>
