--- a/index.html
+++ b/index.html
@@ -145,27 +145,27 @@
                         <div class="project-visual" style="background-image: url"('saman/img/HTML_tag_for_fragments_of_unordered_list-removebg-preview.png');"></div>
                     </a>
                 </li>
-                <!--li class="project-item" style="background-color: #448aff">
-                    <a href="jaysharma2009.github.io/text-toolbox/" rel="noopener" target="_blank">
+                <li class="project-item" style="background-color: #448aff">
+                    <a href="#" rel="noopener" target="_blank">
                         <div class="inner">
-                            <span class="project-type">Web App</span>
-                            <h3 class="project-name" style="color:#ffffff">Text Toolbox</h3>
+                            <span class="project-type">space rocket maybe</span>
+                            <h3 class="project-name" style="color:#ffffff">comming soon</h3>
                         </div>
                         <div class="project-color" style="background-color:#1d74ba"></div>
-                        <div class="project-visual" style="background-image: url('/images/portfolio/text-toolbox.jpg');"></div>
+                        <div class="project-visual" style="background-image: url('#');"></div>
                     </a>
                 </li>
                 <li class="project-item" style="background-color: #000000">
                     <a>
                         <div class="inner">
-                            <span class="project-type">Mobile App</span>
-                            <h3 class="project-name" style="color:#ffffff">Human Clock</h3>
+                            <span class="project-type">founding a new company maybe</span>
+                            <h3 class="project-name" style="color:#ffffff">comming soom</h3>
                         </div>
                         <div class="project-color" style="background-color:#d34141"></div>
                         <div class="project-visual" style="background-image: url('/images/portfolio/human-clock.jpg');"></div>
                     </a>
                 </li>
-                <li class="project-item" style="background-color: #262626">
+                <!--li class="project-item" style="background-color: #262626">
                     <a href="https://github.com/jaysharma/crowdalert-hackindore" rel="noopener" target="_blank">
                         <div class="inner">
                             <span class="project-type">Platform &amp; Service</span>
