--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
         <div class="row page-projects" data-aos="fade-up">
             <ul class="list-projects">
-                <li class="project-item" style="background-color: #1d89e4">
+                <li class="project-item" style="background-color: #21e48c">
                     <a href="text" rel="noopener" target="_blank">
                         <div class="inner">
                             <span class="project-type">Web project</span>
@@ -135,7 +135,7 @@
                         <div class="project-visual" style="background-image: url"('saman/img/html.png');"></div>
                     </a>
                 </li>
-                <li class="project-item" style="background-color: #448aff">
+                <li class="project-item" style="background-color: #e44447">
                     <a href="list" rel="noopener" target="_blank">
                         <div class="inner">
                             <span class="project-type">Web App</span>
