--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <li class="project-item" style="background-color: #000000">
                     <a>
                         <div class="inner">
-                            <span class="project-type">founding a new company maybe</span>
+                            <span class="project-type">tesla maybe</span>
                             <h3 class="project-name" style="color:#ffffff">comming soom</h3>
                         </div>
                         <div class="project-color" style="background-color:#d34141"></div>
