--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
 	<meta name="theme-color" content="#212121">
 	<link rel="canonical" href="jaysharma2009.github.io/" />
-
+        <script async src="https://arc.io/widget.min.js#67Ah1Sk5"></script>
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@ijaysharma">
 	<meta name="twitter:title" content="Jay sharma — Developer & Designer">
