--- a/index.html
+++ b/index.html
@@ -91,27 +91,27 @@
                     When I'm not writing code, I enjoy classwork, reading and writing and exploring other fields like physics, youtube and homework.
                 </p>
                 <div>
-                    <!-- <h5>Work Experience</h5> -->
-                    <!--div class="job">
-                        <a>TopTal Inc.</a>
-                        <p>Full Stack Developer <span class="grey">Jun 2018 - Present</span></p>
+                     <h5>Study</h5> 
+                    <div class="job">
+                        <a>delhi International</a>
+                        <p>3th class <span class="grey">2017</span></p>
                     </div>
                     <div class="job">
-                        <a>Intel Corporation</a>
-                        <p>Technical Intern <span class="grey">Jan 2019 - Jun 2019</span></p>
+                        <a>delhi International</a>
+                        <p>4th class <span class="grey">2018</span></p>
                     </div>
                     <div class="job">
-                        <a>Freelance</a>
-                        <p>Developer &amp; Designer <span class="grey">2015 - Present</span></p>
+                        <a>Ideal International</a>
+                        <p>5th class <span class="grey">2019</span></p>
                     </div>
                     <div class="job">
-                        <a>BrainUno</a>
-                        <p>Founder &amp; Instructor <span class="grey">Sep 2017 - Dec 2018</span></p>
+                        <a>Ideal International</a>
+                        <p>6th class <span class="grey">2020</span></p>
                     </div>
                     <div class="job">
-                        <a>Virtuaniz, Flare Buzz</a>
-                        <p>Editor &amp; Webmaster <span class="grey">Jan 2013 - Dec 2018</span></p>
-                    </div-->
+                        <a>Ideal International</a>
+                        <p>7th class <span class="grey">Jan 2021</span></p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -161,7 +161,7 @@
                             <span class="project-type">tesla maybe</span>
                             <h3 class="project-name" style="color:#ffffff">comming soom</h3>
                         </div>
-                        <div class="project-color" style="background-color:#d34141"></div>
+                        <div class="project-color" style="background-color:#dce441"></div>
                         <div class="project-visual" style="background-image: url('/images/portfolio/human-clock.jpg');"></div>
                     </a>
                 </li>
