--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
                 <div>
                      <h5>Study</h5> 
                     <div class="job">
-                        <a>delhi International</a>
+                        <a>Delhi International School</a>
                         <p>3th class <span class="grey">2017</span></p>
                     </div>
                     <div class="job">
-                        <a>delhi International</a>
+                        <a>Delhi International School</a>
                         <p>4th class <span class="grey">2018</span></p>
                     </div>
                     <div class="job">
-                        <a>Ideal International</a>
+                        <a>Ideal International School</a>
                         <p>5th class <span class="grey">2019</span></p>
                     </div>
                     <div class="job">
-                        <a>Ideal International</a>
+                        <a>Ideal International School</a>
                         <p>6th class <span class="grey">2020</span></p>
                     </div>
                     <div class="job">
-                        <a>Ideal International</a>
+                        <a>Ideal International School</a>
                         <p>7th class <span class="grey">Jan 2021</span></p>
                     </div>
                 </div>
