--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <a href="text" rel="noopener" target="_blank">
                         <div class="inner">
                             <span class="project-type">Web project</span>
-                            <h3 class="project-name" style="color:#ffffff">HTML tags</h3>
+                            <h3 class="project-name" style="color:#ffffff">HTML Tags</h3>
                         </div>
                         <div class="project-color" style="background-color:#178ff6"></div>
                         <div class="project-visual" style="background-image: url"('saman/img/html.png');"></div>
@@ -139,7 +139,7 @@
                     <a href="list" rel="noopener" target="_blank">
                         <div class="inner">
                             <span class="project-type">Web App</span>
-                            <h3 class="project-name" style="color:#ffffff">Text Toolbox</h3>
+                            <h3 class="project-name" style="color:#ffffff">Lists In Html</h3>
                         </div>
                         <div class="project-color" style="background-color:#1d74ba"></div>
                         <div class="project-visual" style="background-image: url"('saman/img/HTML_tag_for_fragments_of_unordered_list-removebg-preview.png');"></div>
