--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
                     <div class="job">
                         <a>Ideal International School</a>
-                        <p>7th class <span class="grey">Jan 2021</span></p>
+                        <p>7th class <span class="grey">2021</span></p>
                     </div>
                 </div>
             </div>
