--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <li class="project-item" style="background-color: #e44447">
                     <a href="list" rel="noopener" target="_blank">
                         <div class="inner">
-                            <span class="project-type">Web App</span>
+                            <span class="project-type">Web project</span>
                             <h3 class="project-name" style="color:#ffffff">Lists In Html</h3>
                         </div>
                         <div class="project-color" style="background-color:#1d74ba"></div>
