--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="home-content">
             <div class="row home-content__main">
                 <h1>Jay Sharma</h1>
-                <p>Developer &amp; Designer</p>
+                <p>Student &amp; Developer</p>
             </div>
         </div>
         <a href="#about" class="home-scroll smoothscroll">
@@ -192,7 +192,7 @@
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead subhead--light">Say hi!</h3>
-                <h1 class="display-1 display-1--light">I'd love to talk.</h1>
+                <h1 class="display-1 display-1--light">I love to talk.</h1>
                 <p class="lead">I'm always looking for opportunities to work on exciting projects. Let's make something great, together.</p>
             </div>
         </div>
