--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<!--head>
     <title>Jay sharma — Developer & Designer</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="description" content="Developer & Designer from India making interactive experiences." />
@@ -229,6 +229,8 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.96.0/examples/js/renderers/CanvasRenderer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.96.0/examples/js/renderers/Projector.js"></script>
     <script src="js/main.js"></script>
-</body>
+</body-->
+<center><h1>UNDER DEVELOPMENT</h1></center>
+<a want to see anywAy href="want.html">
 
 </html>
