--- a/index.html
+++ b/index.html
@@ -4,4 +4,16 @@
 <center><h1>UNDER DEVELOPMENT</h1></center>
 <a href="want.html">
 
+  <style>
+    @font-face {
+  font-family: visby;
+    src: url(https://jaysharma2009.github.io/htmlbasic/VisbyRoundCF-ExtraBold.otf);
+}
+
+
+h1{
+    font-family: visby;
+    text-transform: uppercase;      
+  }
+
 </html>
