--- a/want.html
+++ b/want.html
@@ -112,6 +112,10 @@
                         <a>Ideal International School</a>
                         <p>7th class <span class="grey">2021</span></p>
                     </div>
+		<div class="job">
+                        <a>Ideal International School</a>
+                        <p>8th class <span class="grey">2022</span></p>
+                    </div>
                 </div>
             </div>
         </div>
