--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html>
      <div style="height:600px; width:400px">
-    <iframe
-        src="https://ora.ai/embed/f5b68f37-736d-4a02-85d3-4cdaa5b58e49"
-        width="100%"
-        height="100%"
-        style="border:0; border-radius: 4px; display:flex; background:fill;"
-    />
+website under devlopement
 </div>
     
-<a href="want.html">
+<a href="want.html">click here</a>
 
   
 
